--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,48 @@
 :root {
-    --background: black;
-    --primary-text-color: fuchsia;
-    --secondary-text-color: white;
+    --black: black;
+    --fuchsia: fuchsia;
+    --white: white;
 }
 
+html {
+    /* set 1rem to 10px instead of native 16px to make it easier to calculate font-size values for the rest of the page (e.g. 1.6rem is 16px, 2.0rem is 20px, etc.) */
+    font-size: 62.5%;
+  }
+
 body {
-    background: var(--background);
+    color: var(--white);
+    background: var(--black);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header {
     text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: var(--primary-text-color);
+    color: var(--fuchsia);
+    font-size: 4rem;
 }
 
-p {
-    color: var(--secondary-text-color);
-    text-align: center;
-    padding-left: 210px;
-    padding-right: 210px;
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
+
+.card-column {
+    flex: 1 0 100%;
+}
+
+.code-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    min-height: 100%;
+    
+}
+ .card-header {
+    
+ }
