--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,27 +13,97 @@ body {
     color: var(--white);
     background: var(--black);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.75rem;
 }
 
 header {
     text-align: center;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-bottom: .625rem;
     color: var(--fuchsia);
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1.1;
+}
+
+h1 {
     font-size: 4rem;
 }
 
+h2 {
+    font-size: 3.5rem;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+h4 {
+    font-size: 2.5rem;
+}
+
+h5 {
+    font-size: 2rem;
+}
+
+h6 {
+    font-size: 1.5rem;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+code {
+    font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
+    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
+    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
+    monospace;
+}
+
+header {
+    width: 96%;
+    margin: 0 auto;
+    padding: 2.5rem;
+    text-align: center;
+}
+
+header h1.page-title {
+    padding: 1rem;
+    font-size: 4.5rem;
+}
+
+main {
+    width: 96%;
+    margin: 2rem auto;
+}
+
+footer {
+    margin: 1.5rem;
+    text-align: center;
+}
 
 .row {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
 }
 
+.justify-center {
+    justify-content: center;
+}
 .card-column {
     flex: 1 0 100%;
+    padding: 1.5rem;
+    /* transition: flex-basis 500ms linear; */
+    margin-bottom: 1.5rem;
 }
 
 .code-card {
@@ -41,8 +111,82 @@ h1 {
     flex-direction: column;
     justify-content: flex-start;
     min-height: 100%;
-    
+    color: var(--fuchsia);
+    outline: 2px dashed var(--white);
+    outline-offset: -2px;
+    /*   transition: all 0.5s ease-in-out;  */
 }
- .card-header {
-    
+ .code-card .card-header {
+    position: relative;
+    margin: -4rem 0 1.5rem 0;
+    padding: .5rem 1rem;
+    background-color: var(--black);
+    color: var(--fuchsia);
+    border: 2px solid var(--white);
+    border-radius: 8px;
+    /*   transition: all 0.5s ease-in-out;  */
  }
+
+ .code-card:hover,
+ .code-card:hover .card-header {
+    box-shadow: inset 0px 0px 8px var(--fuchsia), 0 0 15px var(--fuchsia);
+ }
+
+ .code-card .code-block {
+    flex-grow: 1;
+ }
+
+ .code-card pre {
+    .code-card pre {
+        /* set styles to make it so code wraps in <pre> instead of overflowing */
+        white-space: pre-wrap;
+        overflow: auto;
+        tab-size: 4;
+        padding: 1.2rem 1rem;
+        color: var(--gin);
+        border-radius: 8px;
+        /* use linear-gradient() function to create a fading background  */
+        background-image: linear-gradient(
+          rgba(232, 102, 236, 0.3) 0%,
+          rgba(232, 102, 236, 0.6) 100%
+        );
+        display: flex;
+        align-items: center;
+      }
+
+      /* on <pre> click, select all contents so the code is highlighted */
+.code-card pre:active {
+    user-select: all;
+  }
+
+  /* using a mobile-first approach, use `min-width` values going from narrow -> wide for a responsive design */
+  @media screen and (min-width: 768px) {
+    /* on tablets, set columns to only be 50% of the width and not grow */
+    .card-column {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+  }
+
+  /* select the last child to grow to full width if it has space to grow */
+  .card-column:last-child {
+    flex-grow: 1;
+  }
+
+  /* media query for larger screens */
+@media screen and (min-width: 992px) {
+    header {
+      width: 75%;
+    }
+  }
+
+  .card-column {
+    flex: 0 0 33.333%;
+    max-width: 33.333%;
+  }
+
+
+
+
+ }
+ 
