--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,22 +2,27 @@
     --black: black;
     --fuchsia: fuchsia;
     --white: white;
+    --turquoise: turquoise;
 }
+
+/* set content highlight color and background */
+::selection {
+    background-color: var(--turquoise);
+    color: var(--black);
+}
+
 
 html {
     /* set 1rem to 10px instead of native 16px to make it easier to calculate font-size values for the rest of the page (e.g. 1.6rem is 16px, 2.0rem is 20px, etc.) */
     font-size: 62.5%;
-  }
+}
 
 body {
     color: var(--white);
     background: var(--black);
+    /* Sans Serif font stack is implemented to help select the best font for each type of computer operating system */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.75rem;
-}
-
-header {
-    text-align: center;
 }
 
 h1,
@@ -62,10 +67,11 @@ p {
 }
 
 code {
+    /* Monospace font stack is used for our code blocks to make it look more like code */
     font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
-    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
-    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
-    monospace;
+        'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
+        'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
+        monospace;
 }
 
 header {
@@ -90,33 +96,44 @@ footer {
     text-align: center;
 }
 
+/* create our main grid with flexbox, use negative margins to offset the padding on the .card-column class */
 .row {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
 }
 
 .justify-center {
     justify-content: center;
 }
+
+/* using a mobile-first approach, set base column width to be 100% and we'll update it using media queries for larger screen sizes */
 .card-column {
     flex: 1 0 100%;
     padding: 1.5rem;
-    /* transition: flex-basis 500ms linear; */
+    /* when the screen resizes, make it so our columns don't jump in size */
+    /* transition: flex-basis 500ms linear;  */
     margin-bottom: 1.5rem;
 }
 
+/* make each code card a flexbox column to align and justify content within it */
 .code-card {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    padding: 2rem;
     min-height: 100%;
     color: var(--fuchsia);
+    /* outline is like border, but on the outside of the box instead of inside */
     outline: 2px dashed var(--white);
     outline-offset: -2px;
     /*   transition: all 0.5s ease-in-out;  */
 }
- .code-card .card-header {
+
+.code-card .card-header {
+    /* use position and negative margins to move title of card over the card's outline and create an overlap effect */
     position: relative;
     margin: -4rem 0 1.5rem 0;
     padding: .5rem 1rem;
@@ -125,68 +142,67 @@ footer {
     border: 2px solid var(--white);
     border-radius: 8px;
     /*   transition: all 0.5s ease-in-out;  */
- }
+}
 
- .code-card:hover,
- .code-card:hover .card-header {
+/* set an outer and inner drop shadow on the card to create a glowing effect on hover */
+.code-card:hover,
+.code-card:hover .card-header {
     box-shadow: inset 0px 0px 8px var(--fuchsia), 0 0 15px var(--fuchsia);
- }
+}
 
- .code-card .code-block {
+/* each card's code block grows to the height of the largest code block on the page, making each card even in height */
+.code-card .code-block {
     flex-grow: 1;
- }
+}
 
- .code-card pre {
-    .code-card pre {
+.code-card pre {
+    
         /* set styles to make it so code wraps in <pre> instead of overflowing */
         white-space: pre-wrap;
         overflow: auto;
         tab-size: 4;
         padding: 1.2rem 1rem;
-        color: var(--gin);
+        color: var(--white);
         border-radius: 8px;
         /* use linear-gradient() function to create a fading background  */
-        background-image: linear-gradient(
-          rgba(232, 102, 236, 0.3) 0%,
-          rgba(232, 102, 236, 0.6) 100%
-        );
+        background-image: linear-gradient(hsla(298, 64%, 74%, 0.27) 0%,
+        hsla(298, 64%, 74%, 0.603) 100%);
         display: flex;
         align-items: center;
-      }
+    }
 
-      /* on <pre> click, select all contents so the code is highlighted */
-.code-card pre:active {
-    user-select: all;
-  }
+    /* on <pre> click, select all contents so the code is highlighted */
+    .code-card pre:active {
+        user-select: all;
+    }
 
-  /* using a mobile-first approach, use `min-width` values going from narrow -> wide for a responsive design */
-  @media screen and (min-width: 768px) {
-    /* on tablets, set columns to only be 50% of the width and not grow */
+    /* using a mobile-first approach, use `min-width` values going from narrow -> wide for a responsive design */
+    @media screen and (min-width: 768px) {
+
+        /* on tablets, set columns to only be 50% of the width and not grow */
+        .card-column {
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
+    }
+
+    /* select the last child to grow to full width if it has space to grow */
+    .card-column:last-child {
+        flex-grow: 1;
+    }
+
+    /* media query for larger screens */
+    @media screen and (min-width: 992px) {
+        header {
+            width: 75%;
+        }
+    }
+
     .card-column {
-      flex: 0 0 50%;
-      max-width: 50%;
+        flex: 0 0 33.333%;
+        max-width: 33.333%;
     }
-  }
-
-  /* select the last child to grow to full width if it has space to grow */
-  .card-column:last-child {
-    flex-grow: 1;
-  }
-
-  /* media query for larger screens */
-@media screen and (min-width: 992px) {
-    header {
-      width: 75%;
-    }
-  }
-
-  .card-column {
-    flex: 0 0 33.333%;
-    max-width: 33.333%;
-  }
 
 
 
 
- }
- 
